Refactor category comparison in ServerOrdering
Refactor server ordering comparator to check for empty categories using a new helper method.